--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,10 @@
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1"
+  },
+  "resolutions": {
+    "package-a": "2.0.0",
+    "package-b": "5.0.0",
+    "package-c": "1.5.2"
   }
 }
